<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:textSize="40sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="this is question 2?" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:text="@string/a"
                android:layout_weight="10"/>

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:text="@string/b"
                android:layout_weight="10"/>

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:layout_weight="10"
                android:text="@string/c" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:layout_weight="10"
                android:text="@string/d" />

            <Button
                android:id="@+id/b2"
                android:layout_width="93dp"
                android:layout_height="35dp"
                android:layout_marginStart="300dp"
                android:layout_weight="1"
                android:text="@string/next" />


        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>